trying to fix whitespace issue

--- a/src/Header.css
+++ b/src/Header.css
@@ -5,7 +5,9 @@
     z-index: var(--z-fixed);
     top: 0;
     position: fixed; 
-
+    padding: 0;
+    overflow-x: hidden;
+    margin: 0px
 }
 
 .nav {
